# context-absorb

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  session-absorb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Formula/: context-absorb.rb
docs/: architecture.md  reference.md  use-cases.md  verification-ledger.md
docs/codebase/: agent-brief.md  decisions.md  doc-policy.md  index.md  module-map.md  runtime-flows.md  testing.md
scripts/: demo-asciinema.sh
skills/claude/absorb/: SKILL.md
skills/claude/ack/: SKILL.md
skills/claude/handoff/: SKILL.md
skills/claude/inbox/: SKILL.md
skills/claude/session-absorb/: SKILL.md
skills/codex/session-absorb/: SKILL.md
skills/codex/session-absorb/agents/: openai.yaml
skills/codex/session-absorb/scripts/: session_absorb.py
skills/shared/: session_absorb_core.py
tests/: __init__.py  conftest.py  test_handoff.py  test_smoke.py
webapp/: app.js  index.html  styles.css
