[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-absorb"
version = "0.1.0"
description = "Cross-CLI session transfer tool for parallel AI coding sessions (Claude Code + Codex)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["claude-code", "codex", "session-bridge", "ai-tooling", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# stdlib-only - no runtime dependencies

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
